<resources>
    <string name="app_name">MyFitness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weignt">Weignt</string>
    <string name="login">Login</string>
    <string name="height">Height</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_uc">SIGN UP</string>
    <string name="login_uc">LOGIN</string>
    <string name="workoutname">WorkoutName</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="chest_and_arms">Chest and arms</string>
    <string name="upper">Upper</string>
    <string name="back_and_shoulders">Back and shoulders</string>
    <string name="arms_and_shoulders">Arms and shoulders</string>
    <string name="legs">Legs</string>
    <string name="arms">Arms</string>
    <string name="chest_and_triceps">Chest and triceps</string>
    <string name="abdomen">Abdomen</string>
    <string name="cardio">Cardio</string>
    <string name="pull">Pull</string>
    <string name="push">Push</string>
    <string name="chest">Chest</string>
    <string name="shoulders">Shoulders</string>
    <string name="workout">Workout</string>
    <string name="how_many_sets">How many sets</string>
    <string name="exercise">Exercise</string>
    <string name="_2">2</string>
    <string name="_80">80</string>
    <string name="reps">Reps</string>
    <string name="rest">Rest</string>
    <string name="create">Create</string>
    <string name="select_type_of_workout">Select type of workout</string>
    <string name="add_new_day">Add new day</string>
    <string name="protein">Protein</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fats">Fats</string>
    <string name="macronutrients">Macronutrients</string>
    <string name="_200g">200g</string>
    <string name="carbs">Carbs</string>
    <string name="calories">Calories</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="sets">Sets</string>
    <string name="weigh">Weigh</string>
    <string name="suggested_nmacronutrient_intake">Suggested \nmacronutrient intake</string>
    <string name="new_day">New day</string>
    <string name="your_protein_statistic">Your protein statistic</string>
    <string name="your_calorie_statistic">Your calorie statistic</string>
    <string name="account">Account</string>
    <string name="login_to_another_account">login to another account</string>
    <string name="hello">Hello</string>
    <string name="add_a_workout">Add a workout</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="workout_name">Workout Name</string>
    <string name="duration">Duration</string>
    <string name="_45_min">45 min</string>
    <string name="Add">Add</string>
    <string name="Create">Create</string>
    <string name="workouts">Workouts</string>
    <string name="statistics">Statistics</string>
    <string name="nutrition">Nutrition</string>
</resources>