<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:elevation="10dp"
    android:background="@color/myPurple"
    android:layout_height="260dp">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/add_new_day"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/editTextProtein"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:hint="@string/protein"
        android:textColor="@color/white"
        android:inputType="number"
        android:drawableStart="@drawable/chicken24"
        android:textColorHint="@color/white"
        android:drawablePadding="5dp"
        android:fontFamily="@font/didact_gothic"
        android:drawableTint="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:maxLength="4"
        android:textSize="15sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextCarbs"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginStart="16dp"
        android:maxLength="4"
        android:drawableStart="@drawable/bananas24"
        android:drawableTint="@color/white"
        android:drawablePadding="5dp"
        android:hint="@string/carbohydrates"
        android:textColorHint="@color/white"
        android:inputType="number"
        android:textSize="15sp"
        android:fontFamily="@font/didact_gothic"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_design"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextProtein"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextFats"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:inputType="number"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/cheese"
        android:drawableTint="@color/white"
        android:drawablePadding="5dp"
        android:background="@drawable/edittext_design"
        android:fontFamily="@font/didact_gothic"
        android:hint="@string/fats"
        android:maxLength="4"
        android:textColor="@color/white"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCarbs"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createDayButton"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:elevation="10dp"
        android:background="@drawable/signupbuttondes"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFats" />

</androidx.constraintlayout.widget.ConstraintLayout>